crates/plotnik-tests/tests/04-emit/types/naming/error_capture_type_on_match_only_ref.txt
A = (identifier)

Q = (program
  (expression_statement
    (A) @x :: Foo
  )
)
------------------ DIAGNOSTICS -------------------
error: `@x` cannot capture `(A)` because `A` produces no result value
 --> query.ptk:5:5
  |
1 | A = (identifier)
  | ---------------- `A` is defined here
...
5 |     (A) @x :: Foo
  |     ^^^
  |
help: make `A` produce a result by changing `(identifier)` to `(identifier) @x_value` in definition `A`
help: or remove `@x` and capture a node pattern directly
